# mlops-zoomcamp

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  setup.cfg
01-introduction/: README.md
01-introduction/hw/: homework.ipynb  hw.ipynb
02-experiment-tracking/: README.md  duration-prediction.ipynb
02-experiment-tracking/hw/: answers.ipynb  download_file.py  hpo.py  preprocess_data.py  register_model.py  train.py
03-orchestration/: notes.md  prefect_flow.py
