[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Irem Erturk <irem.erturk93@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
pandas = "^1.4.2"
mlflow = "^1.26.0"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
hyperopt = "^0.2.7"
xgboost = "^1.6.1"
fastparquet = "^0.8.1"
boto3 = "^1.23.8"
protobuf = "~3.19.0"

[tool.poetry.dev-dependencies]
johnnydep = "^1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
